added JS to application

--- a/Prework/Module 3/prework_study/index.html
+++ b/Prework/Module 3/prework_study/index.html
@@ -8,8 +8,6 @@
 
     <link rel="stylesheet" href="./assets/style.css" />
 
-    
-
   </head>
   <body>
     <header id="top">
@@ -18,6 +16,7 @@
         src="./assets/bowtie-cat.png"
         alt="Profile image of cat wearing a bow tie."
       />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -68,5 +67,7 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    
+    <script src="./assets/script.js"></script>
   </body>
 </html>
