--- a/Prework/Module 3/prework_study/index.html
+++ b/Prework/Module 3/prework_study/index.html
@@ -59,7 +59,12 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Loop: for(initialize variable ; stop statement; variable increments){ statement(s) }</li>
+          <li>If statement: if(Conditional statement){ statement(s) }</li>
+          <li>Functions: The function declaration defines a function with the specified parameters</li>
+
         </ul>
       </section>
     </main>
